Se implemento el icono, la barra de navegacion, dos botones (inicio de sesion y carrito de compras). todo esto sobre un fondo de imagen.

--- a/proyecto.html
+++ b/proyecto.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Proyecto | Kichink</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <section class="navegador">
+
+        <img class="btnIcon" src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/logo.png" alt="">
+
+
+        <div class="contenedorBuscador">
+            <input type="text" placeholder="Hoy quiero comprar..." class="buscador" id="q">
+            <button class="btnBuscar" type="submit">
+                <img src="./assets/lupa-blanca.png" alt="">
+            </button>
+        </div>
+
+        <div class="cont-user-shop">
+            <button class="user">
+                <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/icon-people.png" alt="">
+            </button>
+            <button class="cart">
+                <img src="./assets/icon-kart.png" alt="">
+            </button>
+        </div>
+<!--
+        <div class="menu">
+            <a href="">Kontrol</a>
+            <a href="">Tips</a>
+            <p>|</p>
+            <a href="">Mis compras</a>
+            <a href="">¿Dónde está mi orden?</a>
+            <a href="">FAQ's</a>
+            <p>|</p>
+            <a href="">¿Cómo funciona?</a>
+        </div>
+    -->
+    </section>
 </body>
+
 </html>
