--- a/proyecto.html
+++ b/proyecto.html
@@ -5,43 +5,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Proyecto | Kichink</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <section class="navegador">
+        <div class="barra-navegacion">
+            <img class="icon" src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/logo.png"
+                alt="Logo">
 
-        <img class="btnIcon" src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/logo.png" alt="">
+            <div class="contenedorBuscador ">
+                <input type="text" placeholder="Hoy quiero comprar..." class="buscador form-control" id="q">
+                <button class="btnBuscar " type="submit">
+                    <img src="./assets/lupa-blanca.png" alt="">
+                </button>
+            </div>
 
+            <div class="cont-user-shop ">
+                <button class="user">
+                    <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/icon-people.png"
+                        alt="">
+                </button>
+                <button class="cart ">
+                    <img src="./assets/icon-kart.png" alt="">
+                </button>
+            </div>
 
-        <div class="contenedorBuscador">
-            <input type="text" placeholder="Hoy quiero comprar..." class="buscador" id="q">
-            <button class="btnBuscar" type="submit">
-                <img src="./assets/lupa-blanca.png" alt="">
-            </button>
+            <div class="menu ">
+                <a href="" class="text-white">Kontrol</a>
+                <a href="" class="text-white">Tips</a>
+                <p class="text-white">|</p>
+                <a href="" class="text-white">Mis compras</a>
+                <a href="" class="text-white">¿Dónde está mi orden?</a>
+                <a href="" class="text-white">FAQ's</a>
+                <p class="text-white">|</p>
+                <a href="" class="text-white">¿Cómo funciona?</a>
+            </div>
+
         </div>
 
-        <div class="cont-user-shop">
-            <button class="user">
-                <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/icon-people.png" alt="">
-            </button>
-            <button class="cart">
-                <img src="./assets/icon-kart.png" alt="">
-            </button>
+
+
+
+        <div class="container">
+
+            <div class="eslogan">
+                <h1 class="text">Se vende, se compra, fácil en Kichink</h1>
+            </div>
+
+            <div class="acciones">
+                <div class="opciones">
+                    <p class="text-l">Quiero vender mis productos</p>
+                    <p class="text-r">Quiero comprar cosas auténticas</p>
+                </div>
+                <div class="botones">
+                    <button class="btn-vender ">Vender</button>
+                    <button class="btn-comprar">Comprar</button>
+                </div>
+            </div>
+
         </div>
-<!--
-        <div class="menu">
-            <a href="">Kontrol</a>
-            <a href="">Tips</a>
-            <p>|</p>
-            <a href="">Mis compras</a>
-            <a href="">¿Dónde está mi orden?</a>
-            <a href="">FAQ's</a>
-            <p>|</p>
-            <a href="">¿Cómo funciona?</a>
-        </div>
-    -->
+
     </section>
+
+      
+
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 
 </html>
