Se sigue trabajando con la siguiente seccion.

--- a/proyecto.html
+++ b/proyecto.html
@@ -69,7 +69,12 @@
 
     </section>
 
-      
+    <section class="row-section">
+        <h3>Descubrimiento semanal</h3>
+        <a href="">Ver más tiendas ></a>
+    </section>
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
