Se finalizó otra seccion, el primer conjunto de cards

--- a/proyecto.html
+++ b/proyecto.html
@@ -74,7 +74,197 @@
         <a href="">Ver más tiendas ></a>
     </section>
 
+    <section class="row section-tiendas-destacadas">
+        <div class="cards-contenedor">
 
+            <!--La unica card con en laces es la primera-->
+            <div class="card">
+                <div class="card-tienda">
+                    <div class="header">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_142752_1783147_0_20200716105921_b.jpg"
+                            alt="logo">
+                        <a href="https://www.kichink.com/stores/sofistabv">
+                            <strong>SOFISTA</strong>
+                        </a>
+                    </div>
+                    <a href="https://www.kichink.com/stores/sofistabv">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2451706_1783147_0_20200725151642_b.jpg"
+                            class="img-responsive" alt="SOFISTA">
+                    </a>
+                    <div class="footer">
+                        <strong>Incredible Fashion for Incredible People</strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-tienda">
+                    <div class="header">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_23819_142697_20141104152120_b.jpg"
+                            alt="logo">
+                        <a href="https://www.kichink.com/stores/www-slimpop-com">
+                            <strong>Palomitas SlimPOP</strong>
+                        </a>
+                    </div>
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_397033_142697_0_20190701133405_b.jpg"
+                            class="img-responsive" alt="Palomitas SlimPOP">
+                    </a>
+                    <div class="footer">
+                        <strong>Palomitas de Maíz</strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-tienda">
+                    <div class="header">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_62764_493935_20161009195101_b.jpg"
+                            alt="logo">
+                        <a href="">
+                            <strong>SOMOS TIERRA</strong>
+                        </a>
+                    </div>
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1159981_493935_0_20191030160040_b.jpg"
+                            class="img-responsive" alt="SOMOS TIERRA">
+                    </a>
+                    <div class="footer">
+                        <strong>Cuidamos de tu belleza y la del planeta</strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-tienda">
+                    <div class="header">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_13639_520247_20170209235536_b.jpg"
+                            alt="logo">
+                        <a href="">
+                            <strong>zona organikum</strong>
+                        </a>
+                    </div>
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1296342_520247_20170209232036_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="footer">
+                        <strong>Ser sano sí es una opción</strong>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+    </section>
+
+
+    <section class="row-section-2">
+        <h3>Diseño para todos</h3>
+        <a href="">Ver más productos ></a>
+    </section>
+
+
+    <!--segunda parte de las otras cards-->
+    <section class="row section-otras-tiendas">
+        <div class="cards-contenedor-2">
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_835226_18067_20151219142402_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">Tabla para picar Halcón Milenario</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por La Tiendita de OVZEKIA</a>
+                    </small>
+                    <strong class="price">$800.00 MXN</strong>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2451789_584386_0_20200726142640_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">(con) tacto: meritatio</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por Momo Room</a>
+                    </small>
+                    <strong class="price">$10000.00 MXN</strong>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2279776_458221_0_20190729111724_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">Block de notas - selva rosa</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por Canela estudio</a>
+                    </small>
+                    <strong class="price">$70.00 MXN</strong>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1876279_791163_0_20180801074408_b.jpg
+                        " class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">CD. "Sui Generis"</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por Charles Ans</a>
+                    </small>
+                    <strong class="price">$250.00 MXN</strong>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_219763_87684_20140703154408_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">Space</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por TRIPOLAR STORE</a>
+                    </small>
+                    <strong class="price">$50.00 MXN</strong>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
