Se finaizó el carruscel debajo de las cards y posteriormete se agregaros la segunda seccion de cards debajo del carruscel.

--- a/proyecto.html
+++ b/proyecto.html
@@ -178,7 +178,7 @@
                     </a>
                     <div class="content">
                         <strong class="title">
-                            <a href="">Tabla para picar Halcón Milenario</a>
+                            <a href="">Tabla Halcón Milenario</a>
                         </strong>
                     </div>
                     <small class="by">
@@ -266,6 +266,265 @@
         </div>
     </section>
 
+
+    <!--carruscel-->
+    <section class="section-como-funciona" id="section-como-funciona">
+        <div class="containerr">
+            <h2>¿Cómo funciona Kichink?</h2>
+
+            <div id="carousel-como-funciona" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-sm-4">
+                                <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/como-funciona-1.png"
+                                    class="d-block w-100 img-carousel" alt="Paso 1">
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/como-funciona-2.png"
+                                    class="d-block w-100 img-carousel" alt="Paso 2">
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/como-funciona-3.png"
+                                    class="d-block w-100 img-carousel" alt="Paso 3">
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <div class="row justify-content-center">
+                            <div class="col-12 col-sm-4">
+                                <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/como-funciona-4.png"
+                                    class="d-block w-100 img-carousel" alt="Paso 4">
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/como-funciona-5.png"
+                                    class="d-block w-100 img-carousel" alt="Paso 5">
+                            </div>
+                            <div class="col-12 col-sm-4">
+                                <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/www/home/como-funciona-6.png"
+                                    class="d-block w-100 img-carousel" alt="Paso 6">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--control manual-->
+                <button class="carousel-control-prev" type="button" data-bs-target="#carousel-como-funciona"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carousel-como-funciona"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Siguiente</span>
+                </button>
+
+                <!--boton -->
+                <div class="text-center mt-4">
+                    <a href="#" class="nueva-tienda">Abrir tienda gratis</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--siguiente seccion de cards -->
+    <section class="row-section">
+        <h3>Lectura y Música</h3>
+    </section>
+
+    <section class="row section-tiendas-destacadas">
+        <div class="cards-contenedor">
+
+            
+            <div class="card">
+                <div class="card-tienda">
+                    <div class="header">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_35003_225259_20170119162908_b.jpg"
+                            alt="logo">
+                        <a href="">
+                            <strong>JB Entertainment </strong>
+                        </a>
+                    </div>
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2145249_225259_0_20190321180326_b.jpg"
+                            class="img-responsive" alt="SOFISTA">
+                    </a>
+                    <div class="footer">
+                        <strong>JB entertainment Tienda virtual (Oficial). Aquí encontraras material de tus artistas favoritos.</strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-tienda">
+                    <div class="header">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_17682_101619_0_20190723213407_b.jpg"
+                            alt="logo">
+                        <a href="">
+                            <strong>TORREBLANCA ~ Mercancía oficial</strong>
+                        </a>
+                    </div>
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2274306_101619_0_20190723223418_b.jpg"
+                            class="img-responsive" alt="Palomitas SlimPOP">
+                    </a>
+                    <div class="footer">
+                        <strong>Tienda en línea</strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-tienda">
+                    <div class="header">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_28539_176873_20141229204243_b.jpg"
+                            alt="logo">
+                        <a href="">
+                            <strong>ComuArte</strong>
+                        </a>
+                    </div>
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1506069_176873_20170814180407_b.jpg"
+                            class="img-responsive" alt="SOMOS TIERRA">
+                    </a>
+                    <div class="footer">
+                        <strong>El Colectivo de Mujeres en la Música A. C. y su filial ComuArte</strong>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-tienda">
+                    <div class="header">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_637_370_0_20181120145722_b.jpg"
+                            alt="logo">
+                        <a href="">
+                            <strong>Porter</strong>
+                        </a>
+                    </div>
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2296181_1618458_0_20190814153439_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="footer">
+                        <strong>Merch oficial de Porter</strong>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+
+    </section>
+
+    <section class="row-section-2">
+        <h3>Te podría interesar</h3>
+    </section>
+
+
+    <!--segunda parte de las otras cards-->
+    <section class="row section-otras-tiendas">
+        <div class="cards-contenedor-2">
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1690237_28969_0_20180213120534_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">TORTILLAS (Sudadera)</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por ASFALTO</a>
+                    </small>
+                    <strong class="price">$499.00 MXN</strong>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1339049_43438_0_20180106132658_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">Jabón Menta & Romero </a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por sinolorperruno.com.mx</a>
+                    </small>
+                    <strong class="price">$60.00 MXN</strong>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2441941_19639_1_20200606085150_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">ARETES GUMMY BEAR</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por DIEGO DOM joyería</a>
+                    </small>
+                    <strong class="price">$379.00 MXN</strong>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2311045_59029_0_20190830123609_b.jpg"
+                         class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">Falda Orion</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por Lacayo Pez</a>
+                    </small>
+                    <strong class="price">$1200.00 MXN</strong>
+                </div>
+            </div>
+
+
+            <div class="card">
+                <div class="card-articulo">
+                    <a href="">
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2048164_1063358_1_20181226010935_b.jpg"
+                            class="img-responsive" alt="zona organikum">
+                    </a>
+                    <div class="content">
+                        <strong class="title">
+                            <a href="">Playera "Baila esta cumbia"</a>
+                        </strong>
+                    </div>
+                    <small class="by">
+                        <a href="">por Calate México</a>
+                    </small>
+                    <strong class="price">$274.00 MXN</strong>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
