se vinculo la pagina del vendedor recien creada a cada card de producto

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             <div class="card">
                 <div class="card-tienda">
                     <div class="header">
-                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_142752_1783147_0_20200716105921_b.jpg"
+                        <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_142752_1783147_0_20200716105921_b.jpg" 
                             alt="logo">
-                        <a href="https://www.kichink.com/stores/sofistabv">
+                        <a href="perfilVendedor.html">
                             <strong>SOFISTA</strong>
                         </a>
                     </div>
-                    <a href="https://www.kichink.com/stores/sofistabv">
+                    <a href="perfilVendedor.html">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2451706_1783147_0_20200725151642_b.jpg"
                             class="img-responsive" alt="SOFISTA">
                     </a>
@@ -102,11 +102,11 @@
                     <div class="header">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_23819_142697_20141104152120_b.jpg"
                             alt="logo">
-                        <a href="https://www.kichink.com/stores/www-slimpop-com">
+                            <a href="perfilVendedor.html">
                             <strong>Palomitas SlimPOP</strong>
                         </a>
                     </div>
-                    <a href="">
+                    <a href="perfilVendedor.html">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_397033_142697_0_20190701133405_b.jpg"
                             class="img-responsive" alt="Palomitas SlimPOP">
                     </a>
@@ -121,11 +121,11 @@
                     <div class="header">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_62764_493935_20161009195101_b.jpg"
                             alt="logo">
-                        <a href="">
+                            <a href="perfilVendedor.html">
                             <strong>SOMOS TIERRA</strong>
                         </a>
                     </div>
-                    <a href="">
+                    <a href="perfilVendedor.html">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1159981_493935_0_20191030160040_b.jpg"
                             class="img-responsive" alt="SOMOS TIERRA">
                     </a>
@@ -140,11 +140,11 @@
                     <div class="header">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_13639_520247_20170209235536_b.jpg"
                             alt="logo">
-                        <a href="">
+                            <a href="perfilVendedor.html">
                             <strong>zona organikum</strong>
                         </a>
                     </div>
-                    <a href="">
+                    <a href="perfilVendedor.html">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1296342_520247_20170209232036_b.jpg"
                             class="img-responsive" alt="zona organikum">
                     </a>
@@ -343,11 +343,11 @@
                     <div class="header">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_35003_225259_20170119162908_b.jpg"
                             alt="logo">
-                        <a href="">
+                            <a href="perfilVendedor.html">
                             <strong>JB Entertainment </strong>
                         </a>
                     </div>
-                    <a href="">
+                    <a href="perfilVendedor.html">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2145249_225259_0_20190321180326_b.jpg"
                             class="img-responsive" alt="SOFISTA">
                     </a>
@@ -363,11 +363,11 @@
                     <div class="header">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_17682_101619_0_20190723213407_b.jpg"
                             alt="logo">
-                        <a href="">
+                            <a href="perfilVendedor.html">
                             <strong>TORREBLANCA ~ Mercancía oficial</strong>
                         </a>
                     </div>
-                    <a href="">
+                    <a href="perfilVendedor.html">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2274306_101619_0_20190723223418_b.jpg"
                             class="img-responsive" alt="Palomitas SlimPOP">
                     </a>
@@ -382,11 +382,11 @@
                     <div class="header">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_28539_176873_20141229204243_b.jpg"
                             alt="logo">
-                        <a href="">
+                            <a href="perfilVendedor.html">
                             <strong>ComuArte</strong>
                         </a>
                     </div>
-                    <a href="">
+                    <a href="perfilVendedor.html">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_1506069_176873_20170814180407_b.jpg"
                             class="img-responsive" alt="SOMOS TIERRA">
                     </a>
@@ -401,11 +401,11 @@
                     <div class="header">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/stores_637_370_0_20181120145722_b.jpg"
                             alt="logo">
-                        <a href="">
+                            <a href="perfilVendedor.html">
                             <strong>Porter</strong>
                         </a>
                     </div>
-                    <a href="">
+                    <a href="perfilVendedor.html">
                         <img src="https://s3.amazonaws.com/kc20-img2-kichink/items_2296181_1618458_0_20190814153439_b.jpg"
                             class="img-responsive" alt="zona organikum">
                     </a>
