--- a/perfilVendedor.html
+++ b/perfilVendedor.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SOFISTA | Productos</title>
-
-    <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>SOFISTA | Productos</title>
         <link rel="stylesheet" href="estilosProdSof.css">
         <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     </head>
 
 <body>
@@ -84,22 +84,22 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img4.png" alt="Charm Corazón">
-            <h3>CHARM CORAZÓN</h3>
-            <p>$ 1,185.00 MXN</p>
+            <h3>CHARM CORONA</h3>
+            <p>$ 1,510.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img5.png" alt="Charm Flecha">
-            <h3>CHARM FLECHA</h3>
-            <p>$ 1,110.00 MXN</p>
+            <h3>TENIS CARVELA BY KURT GEIGER</h3>
+            <p>$ 2,800.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img6.png" alt="Charm Piña">
-            <h3>CHARM PIÑA</h3>
-            <p>$ 2,050.00 MXN</p>
+            <h3>SANDALIAS TORY</h3>
+            <p>$ 6,250.00 MXN</p>
         </div>
     </div>
 
@@ -107,22 +107,22 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img7.png" alt="Charm Corazón">
-            <h3>CHARM CORAZÓN</h3>
-            <p>$ 1,185.00 MXN</p>
+            <h3>SANDALIAS TORY</h3>
+            <p>$ 6,625.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img8.png" alt="Charm Flecha">
-            <h3>CHARM FLECHA</h3>
-            <p>$ 1,110.00 MXN</p>
+            <h3>ALPARGATAS TORY</h3>
+            <p>$ 5,640.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img9.png" alt="Charm Piña">
-            <h3>CHARM PIÑA</h3>
-            <p>$ 2,050.00 MXN</p>
+            <h3>CARTERA TORY</h3>
+            <p>$ 4,765.00 MXN</p>
         </div>
     </div>
 
@@ -130,22 +130,22 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img10.png" alt="Charm Corazón">
-            <h3>CHARM CORAZÓN</h3>
-            <p>$ 1,185.00 MXN</p>
+            <h3>TORY SWINGPACK</h3>
+            <p>$ 7,665.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img11.png" alt="Charm Flecha">
-            <h3>CHARM FLECHA</h3>
-            <p>$ 1,110.00 MXN</p>
+            <h3>LENTES DIOR</h3>
+            <p>$ 6,290.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img12.png" alt="Charm Piña">
-            <h3>CHARM PIÑA</h3>
-            <p>$ 2,050.00 MXN</p>
+            <h3>SANDALIAS SOLUDOS</h3>
+            <p>$ 1,700.00 MXN</p>
         </div>
     </div>
 
@@ -153,27 +153,68 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img13.png" alt="Charm Corazón">
-            <h3>CHARM CORAZÓN</h3>
-            <p>$ 1,185.00 MXN</p>
+            <h3>BOLSA MARC JACOBS</h3>
+            <p>$ 4,700.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img14.png" alt="Charm Flecha">
-            <h3>CHARM FLECHA</h3>
-            <p>$ 1,110.00 MXN</p>
+            <h3>BOLSA DE PIEL MARC JACOBS</h3>
+            <p>$ 8,415.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img15.png" alt="Charm Piña">
-            <h3>CHARM PIÑA</h3>
-            <p>$ 2,050.00 MXN</p>
+            <h3>BOLSA DE PIEL MARC JACOBS</h3>
+            <p>$ 4,500.00 MXN</p>
         </div>
     </div>
 
 
     
+<footer class="footer">
+    <div class="footer-col">
+        <h4>Conoce más de</h4>
+        <img src="https://kc20-kchnk-static.s3.amazonaws.com/kiui/prod/images/v5/brand_logo.svg" alt="Kichink"
+            class="footer-logo">
+        <p>© 2025 Kichink Todos los derechos reservados</p>
+    </div>
+
+    <div class="footer-col">
+        <h4>Configuración</h4>
+        <p>Idioma ES ▾</p>
+        <p>Moneda MXN ▾</p>
+    </div>
+
+    <div class="footer-col">
+        <h4>Más Información</h4>
+        <p>Ayuda</p>
+        <p>Avisos de privacidad</p>
+        <p>Términos del servicio</p>
+        <p>Cambios y devoluciones</p>
+        <p>Políticas de Privacidad</p>
+    </div>
+
+    <div class="footer-col">
+        <h4>Síguenos en</h4>
+        <p><i class="fa fa-facebook"></i> Facebook</p>
+        <p><i class="fa fa-twitter"></i> Twitter</p>
+        <p><i class="fa fa-pinterest"></i> Pinterest</p>
+        <p><i class="fa fa-google"></i> Google</p>
+    </div>
+    <div class="footer-col store-links">
+        <h4 style="color: #663399; text-align: right;">Sigue a esta tienda<br>en la app de Kichink</h4>
+        <a href="#">Dale like a tus<br>productos favoritos</a>
+    </div>
+    <div class="footer-col store-links">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Google_Play_Store_badge_EN.svg/512px-Google_Play_Store_badge_EN.svg.png"
+            alt="Google Play" class="store-img">
+        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" alt="App Store"
+            class="store-img">
+    </div>
+</footer>
 
 
 
