--- a/perfilVendedor.html
+++ b/perfilVendedor.html
@@ -61,21 +61,21 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img1.png" alt="Charm Corazón">
-            <h3>CHARM CORAZÓN</h3>
+            <a href="producto.html"><h3 >CHARM CORAZÓN</h3></a>
             <p>$ 1,185.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img2.png" alt="Charm Flecha">
-            <h3>CHARM FLECHA</h3>
+            <a href="producto.html"><h3>CHARM FLECHA</h3></a>
             <p>$ 1,110.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img3.png" alt="Charm Piña">
-            <h3>CHARM PIÑA</h3>
+            <a href="producto.html"><h3>CHARM PIÑA</h3></a>
             <p>$ 2,050.00 MXN</p>
         </div>
     </div>
@@ -84,21 +84,21 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img4.png" alt="Charm Corazón">
-            <h3>CHARM CORONA</h3>
+            <a href="producto.html"><h3>CHARM CORONA</h3></a>
             <p>$ 1,510.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img5.png" alt="Charm Flecha">
-            <h3>TENIS CARVELA BY KURT GEIGER</h3>
+            <a href="producto.html"><h3>TENIS CARVELA BY KURT GEIGER</h3>
             <p>$ 2,800.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img6.png" alt="Charm Piña">
-            <h3>SANDALIAS TORY</h3>
+            <a href="producto.html"><h3>SANDALIAS TORY</h3></a>
             <p>$ 6,250.00 MXN</p>
         </div>
     </div>
@@ -107,21 +107,21 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img7.png" alt="Charm Corazón">
-            <h3>SANDALIAS TORY</h3>
+            <a href="producto.html"><h3>SANDALIAS TORY</h3></a>
             <p>$ 6,625.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img8.png" alt="Charm Flecha">
-            <h3>ALPARGATAS TORY</h3>
+            <a href="producto.html"><h3>ALPARGATAS TORY</h3></a>
             <p>$ 5,640.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img9.png" alt="Charm Piña">
-            <h3>CARTERA TORY</h3>
+            <a href="producto.html"><h3>CARTERA TORY</h3></a>
             <p>$ 4,765.00 MXN</p>
         </div>
     </div>
@@ -130,21 +130,21 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img10.png" alt="Charm Corazón">
-            <h3>TORY SWINGPACK</h3>
+            <a href="producto.html"><h3>TORY SWINGPACK</h3></a>
             <p>$ 7,665.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img11.png" alt="Charm Flecha">
-            <h3>LENTES DIOR</h3>
+            <a href="producto.html"><h3>LENTES DIOR</h3></a>
             <p>$ 6,290.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img12.png" alt="Charm Piña">
-            <h3>SANDALIAS SOLUDOS</h3>
+            <a href="producto.html"><h3>SANDALIAS SOLUDOS</h3></a>
             <p>$ 1,700.00 MXN</p>
         </div>
     </div>
@@ -153,21 +153,21 @@
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img13.png" alt="Charm Corazón">
-            <h3>BOLSA MARC JACOBS</h3>
+            <a href="producto.html"><h3>BOLSA MARC JACOBS</h3></a>
             <p>$ 4,700.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta unico">Único</div>
             <img src="./assets/img14.png" alt="Charm Flecha">
-            <h3>BOLSA DE PIEL MARC JACOBS</h3>
+            <a href="producto.html"><h3>BOLSA DE PIEL MARC JACOBS</h3></a>
             <p>$ 8,415.00 MXN</p>
         </div>
 
         <div class="producto">
             <div class="etiqueta agotado">Agotado</div>
             <img src="./assets/img15.png" alt="Charm Piña">
-            <h3>BOLSA DE PIEL MARC JACOBS</h3>
+            <a href="producto.html"><h3>BOLSA DE PIEL MARC JACOBS</h3></a>
             <p>$ 4,500.00 MXN</p>
         </div>
     </div>
